Created soundbar with animation

--- a/index.html
+++ b/index.html
@@ -2,11 +2,95 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Overpass|Bubbler+One|Vibur" rel="stylesheet">
     <title>Sean Wines | Web Dev</title>
     <link rel="stylesheet" href="./assets/styles/main.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./assets/scripts/main.js" charset="utf-8"></script>
   </head>
   <body>
+    <div class="container">
 
+      <header id="header" class="ease">
+        <h1 class="ease">Sean Wines | Front End Web Dev</h1>
+        <div class="header-banner"></div>
+      </header>
+
+      <main id="main">
+
+        <section class="about section">
+          <h2>About me</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+          <div class="indent section">
+            <h3>Current Position</h3>
+            <h4>Vuria | Web Developer</h4>
+            <p class="small-margin">Aug 2016 -> current</p>
+            <h5>Stack</h5>
+            <div class="small-margin three-col">
+              <p>Concrete5 CMS</p>
+              <p>React Native</p>
+              <p>jQuery</p>
+              <p>sass</p>
+              <p>Babel</p>
+              <p>Gulp</p>
+              <p>Photoshop</p>
+              <p>Sketch</p>
+              <p>test</p>
+            </div>
+            <h5>Description</h5>
+            <p>I started my jurney at Vuria as a concrete5 web developer. This included compltely customized CMS themes with full stack development using PHP. So far, I've completed and launched 8 websites. I should mention Vuira does not work in teams and all projects are done on an indivdual bases. Over the past few months I have transititioned into a React Native role. Javascript > jQuery :).</p>
+          </div>
+
+          <div class="indent section">
+            <h3>Current Projects</h3>
+            <h4>For Fun:</h4>
+            <div class="two-col">
+              <div class="fullee-callout">
+                <h5>Fullee is a free video background library.</h4>
+                  <div class="three-col">
+                    <a target="_blank" href="https://github.com/sawdev88/fullee"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a target="_blank" href="http://develop.fullee.co"><i class="fa fa-code" aria-hidden="true"></i></a>
+                    <a target="_blank" href="http://fullee.co"><i class="fa fa-window-maximize" aria-hidden="true"></i></a>
+                  </div>
+              </div>
+              <div class="fullee-logo center">
+                <h2>Fullee.</h2>
+              </div>
+            </div>
+            <h5>At Work:</h5>
+            <p>Superstar Car Wash | React Native</p>
+          </div>
+
+          <div class="section">
+            <h3>Favorite Movie</h3>
+            <p>Goodfellas</p>
+          </div>
+
+          <section class="sound-container">
+            <div class="bar bar-1"></div>
+            <div class="bar bar-2"></div>
+            <span class="bar bar-3"></span>
+            <span class="bar bar-4"></span>
+            <span class="bar bar-5"></span>
+            <span class="bar bar-6"></span>
+            <span class="bar bar-7"></span>
+            <span class="bar bar-8"></span>
+          </section>
+
+        </section>
+
+      </main>
+    </div>
+
+    <footer id="footer">
+      <div class="footer-video">
+        <video src="./assets/video/Ma-Vibes.ogv" autoplay loop muted></video>
+      </div>
+      <div class="footer-callout">
+        <p>email goes here</p>
+      </div>
+      <script src="https://use.fontawesome.com/0b488e2512.js"></script>
+    </footer>
   </body>
 </html>
